--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
-/* Created by: Mr. Coxall
-* Created on: Sep 2020
+/* Created by: conor
+* Created on: Jan 2023
 * This file contains the CSS for index.html
 */
 
